footer style and alignment fixes

--- a/app/assets/stylesheets/screen.css.scss
+++ b/app/assets/stylesheets/screen.css.scss
@@ -132,22 +132,24 @@ footer {
   div {display: inline;}
   clear: both;
   padding: 8px 0px;
-  text-align: center;
+	text-align: center;
   span {
   }
   #footer_img {
-    vertical-align: middle;
+    vertical-align: text-bottom;
   }
   
   .request {
-    margin-right: 154px;
-    text-align: center;
 		a, a:visited, a:link { 
 			color: #ffffff; 
 			font-size: .75em;
 		}
 		a:hover { color: #999999; }
   }
+}
+.hire-copyright { 
+	color: #fff;
+	font-size: .75em;
 }
 
 a, a:visited {
@@ -158,6 +160,8 @@ a, a:visited {
 a:hover {
   text-decoration: underline;
 }
+
+.fb_ltr { position: relative !important; top: -3px; width: 130px !important; } /* fb widget ghetto align fix */
 @media screen and (min-width: 0) {
 	.starburst {
 	  background: url(/assets/bg-starburst.png) no-repeat top center;
@@ -203,12 +207,16 @@ a:hover {
 		padding: 0 0 1em 0;
 		text-align: center;
 	}
+	.request { margin: 0; }
+	.hire-copyright { display: block; }
 }
 /* 480 */
 @media screen and (min-width: 30em) {
 }
 /* 640 */
 @media screen and (min-width: 40em) {
+	.request { margin-right: 170px; }
+	.hire-copyright { display: inline; }
 
 }
 /* 768 */
